<resources>
    <string name="place_holder">%s</string>
    <string name="app_name">待办管家</string>
    <string name="help_content">待办小管家\n番茄钟+日常支出记账+待办事项记录</string>
    <string name="app_ver">当前版本%s</string>
    <string name="setting">设置</string>
    <string name="help">帮助</string>
    <string name="about">关于</string>
    <string name="logout">退 出</string>
    <string name="tv_real_time_data">温:%1$s℃,湿:%2$s％,环:%3$s℃</string>
    <string name="title_bar">顶部导航</string>
    <string name="clock">番茄钟</string>
    <string name="todo">待办事项列表</string>
    <string name="todo_tab">待办事项</string>
    <string name="more">更多</string>
    <string name="startClock">开始计时</string>
    <string name="stopClock">停止计时</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="clock_period">番茄钟周期：</string>
    <string name="enter_clock_period">请输入番茄钟周期</string>
    <string name="min">分钟</string>
    <string name="clock_finished">番茄钟已完成！</string>
    <string name="add_todo">添加待办事项...</string>
    <string name="todo_view">查看待办事项</string>
    <string name="todo_add">添加待办事项</string>
    <string name="todo_edit">编辑</string>
    <string name="show_finished">显示已完成</string>
    <string name="str_title">标题</string>
    <string name="str_date">2016-10-25，今天</string>
    <string name="test">test</string>
    <string name="title_submit">完成</string>
    <string name="title_ok">好的</string>
    <string name="hide_finished">隐藏已完成</string>
    <string name="todo_title">标题:</string>
    <string name="todo_content">待办事项内容</string>
    <string name="add_todo_title">待办事项标题</string>
    <string name="add_todo_content">内容:</string>
    <string name="err_title">待办标题不能为空！</string>
    <string name="add_todo_ok">添加待办事项成功！</string>
    <string name="error_access">非法访问！</string>
    <string name="todo_delete">删除</string>
    <string name="edit_todo_ok">编辑待办事项成功！</string>
    <string name="del_todo_ok">删除待办事项成功！</string>
    <string name="add_todo_expire_date">截止日期:</string>
    <string name="add_todo_expire_datee">待办事项截止日期</string>
    <string name="add_ok">添加成功！</string>
    <string name="edit_ok">编辑成功！</string>
    <string name="export_data">导出数据</string>
    <string name="import_data">导入数据</string>
    <string name="start_view">初始界面：</string>
    <string name="money">记账</string>
    <string name="insert_cost">请输入消费金额（取整）</string>
    <string name="add_cost">记一笔</string>
    <string name="str_title_cost">支出类别+金额</string>
    <string name="str_date_cost">详细说明+日期</string>
    <string name="del_cost_ok">删除记录成功！</string>
    <string name="cost_add">确定</string>
    <string name="please_insert_cost_count">请先输入消费金额！</string>
    <string name="insert_cost_title">请输入描述信息（可选）</string>
    <string name="cost_type">账目类型</string>
    <string name="add_cost_type">新增</string>
    <string name="choose_cost_type">选择类别：</string>
    <string name="insert_cost_type">输入类别：</string>
    <string name="please_insert_cost_type_name">请输入消费类别名</string>
    <string name="str_cost_type">此处显示消费类型</string>
    <string name="del_cost_type_ok">删除成功！</string>
    <string name="insert_cost_date">请设置日期</string>
    <string name="scan">扫一扫</string>
</resources>
