<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clock_period" />

        <EditText
            android:id="@+id/et_config_clock_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_clock_period"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:clickable="true"
            android:id="@+id/btn_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_tv_button"
            android:textSize="20sp"
            android:text="@string/confirm" />

        <TextView
            android:clickable="true"
            android:id="@+id/btn_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:background="@drawable/selector_tv_button"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>