<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_frg_more_setting"
        style="@style/tv_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/setting"
        android:drawableRight="@drawable/icon_arrow"
        android:text="@string/setting" />
    <TextView
        android:id="@+id/tv_frg_more_help"
        style="@style/tv_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/help"
        android:drawableRight="@drawable/icon_arrow"
        android:text="@string/help" />
    <TextView
        android:id="@+id/tv_frg_more_about"
        style="@style/tv_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/about"
        android:drawableRight="@drawable/icon_arrow"
        android:text="@string/about" />

    <TextView
        android:id="@+id/tv_frg_more_exit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/selector_tv_more_exit"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/logout"
        android:textColor="@color/tomato"
        android:textSize="25sp" />
</LinearLayout>