<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ly_top_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/my_blue">

        <TextView
            android:id="@+id/tv_top"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/title_bar"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/iv_scan"
            android:background="@drawable/selector_tv_ok"
            android:padding="10dp"
            android:layout_weight="0"
            android:src="@drawable/scan"
            android:layout_width="48dp"
            android:layout_height="48dp" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="4dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_clock"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/selector_tab_clock"
            android:text="@string/clock" />

        <RadioButton
            android:id="@+id/rb_money"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/selector_tab_money"
            android:text="@string/money" />

        <RadioButton
            android:id="@+id/rb_todo"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/selector_tab_todo"
            android:text="@string/todo_tab" />

        <RadioButton
            android:id="@+id/rb_more"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/selector_tab_more"
            android:text="@string/more" />
    </RadioGroup>

    <View
        android:id="@+id/div_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_above="@id/radio_group"
        android:background="@color/white" />

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/div_tab_bar"
        android:layout_below="@id/ly_top_bar">

    </android.support.v4.view.ViewPager>


</RelativeLayout>