<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_smoke"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layout_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/selector_tv_ok"
            android:clickable="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:src="@drawable/back" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@color/my_blue"
            android:gravity="center"
            android:text="@string/add_todo"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_ok"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="0"
            android:background="@drawable/selector_tv_ok"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/title_submit"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todo_title" />

        <EditText
            android:id="@+id/et_todo_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_et"
            android:hint="@string/add_todo_title"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textColor="@drawable/selector_et_text_color"
            android:textColorHint="#aaaaaa"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/add_todo_content" />

        <ScrollView
            android:layout_marginTop="10dp"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="vertical"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <EditText
                android:id="@+id/et_todo_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="150dp"
                android:background="@drawable/bg_et"
                android:gravity="top"
                android:hint="@string/todo_content"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine"
                android:nextFocusForward="@+id/et_todo_expire_date"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:textColor="@drawable/selector_et_text_color"
                android:textColorHint="#aaaaaa"
                android:textSize="18sp" />
        </ScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/add_todo_expire_date" />

        <EditText
            android:id="@+id/et_todo_expire_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_et"
            android:hint="@string/add_todo_expire_datee"
            android:imeOptions="actionDone"
            android:inputType="date"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textColor="@drawable/selector_et_text_color"
            android:textColorHint="#aaaaaa"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>
